some change happend

--- a/style.css
+++ b/style.css
@@ -15,3 +15,21 @@ h1 {
 section {
     display: flex;
 }
+
+.half-width {
+    width: 50%;
+    padding-left: 5%;
+}
+
+.half-width img {
+    width: 70%;
+}
+
+.link-button {
+    text-decoration: none;
+    background-color: orange;
+    background-image: linear-gradient(orange, tomato);
+    font-weight: 700;
+    padding: 10px 40px;
+    border-radius: 10PX;
+}
