--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     ;
 }
 
-section {
+.flexibal-container {
     display: flex;
     margin: 150px;
 }
@@ -45,4 +45,42 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+.boxshadow {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-radius: 20px;
+
+}
+
+#expariance-iteam {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+#full-stack {
+    border-left: 7px solid;
+    border-image: linear-gradient(red, cyan);
+    border-image-slice: 1;
+
+}
+
+.expariance-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+footer p {
+    text-align: center;
 }
